--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-globe": "^5.0.2",
     "react-scripts": "3.4.4",
+    "three": "^0.121.1",
     "typescript": "^4.0.3"
   },
   "scripts": {
