--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
     "react-globe": "^5.0.2",
     "react-scripts": "3.4.4",
     "three": "^0.121.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "victory": "^35.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
